prevent overflow from member portrait to fix mobile view on android

--- a/src/styles/sass/base.css
+++ b/src/styles/sass/base.css
@@ -424,6 +424,7 @@ body, html {
   flex-direction: column;
   align-items: center; }
   .member__portrait {
+    overflow: hidden;
     width: 135px;
     height: 135px;
     background-image: linear-gradient(180deg, #FFE974 0%, #EBA471 21%, #EB7187 45%, #9782EA 67%, #719AEB 93%);
