--- a/src/styles/sass/components/landing/_team.sass
+++ b/src/styles/sass/components/landing/_team.sass
@@ -25,6 +25,7 @@
   flex-direction: column
   align-items: center
   &__portrait
+    overflow: hidden
     width: 135px
     height: 135px
     background-image: linear-gradient(180deg, #FFE974 0%, #EBA471 21%, #EB7187 45%, #9782EA 67%, #719AEB 93%)
@@ -37,7 +38,7 @@
     font-weight: 600;
     color: white
     padding: .5rem 0
-  &__title  
+  &__title
     font-size: 1.8rem
     color: $color-text-alt
   &__links
